# AIChat

./: .cursorignore  .cursorrules  .dockerignore.minimal  .env.example  .gcloudignore  .gitignore  AI_PARTNERSHIP_PLAN.md  CHANGELOG.md  COMPLETE.md  CURSOR_TERMINAL_COMMANDS.md  DEPLOYMENT.md  Dockerfile.minimal  Dockerfile.standalone  HANDOVER.md  LICENSE  QUICK_START.txt  README.md  README_FINAL.md  README_SYSTEM.md  ROADMAP.md  RUN_NOW.sh  START_NOW.sh  TROUBLESHOOTING.md  VERSION_INFO.md  ai_chatbot_demo.py  auto_commit.sh  backup_project.sh  chatgpt_style_ai.py  check_status.sh  clean_customer_service.sh  cleanup.sh  cleanup_project.sh  complete_fix.sh  complete_fix_v2.sh  complete_fix_v3.sh  cursor_commands.txt  delete_files_now.sh  deploy.sh  deploy_admin_firebase.sh  deploy_admin_static.sh  (+72 more)
admin/: .firebaserc  .gitignore  Dockerfile  app.yaml  firebase.json  package-lock.json  package.json
app/: main.py
backend/: .gcloudignore  Dockerfile  create_admin.py  main.py  requirements.txt  requirements_fixed.txt  requirements_minimal.txt  requirements_py313.txt
customer_service/: agent.py  config.py  health_check.py  prompts.py
database/: connection.py  firestore_setup.py  models.py  schema.sql
docs/: ACTUAL_TODO.md  CHAT_WIDGET_GUIDE.md  CURSOR_INSTRUCTIONS.md  DEMO_GUIDE.md  MARKETING_STRATEGY.md  PRODUCTION_READY_PLAN.md  PRODUCTION_TODO.md  REALISTIC_STATUS.md  SALES_PITCH.md  SCALING_GUIDE.md  SECURITY_GUIDE.md  WORKFLOW_GUIDE.md
frontend/: .env.development  .env.staging  .gcloudignore  Dockerfile  next.config.js  package-lock.json  package.json  (+3 more)
(+75 files in other folders)
