[project]
name = "elite-beauty-ai-chat"
version = "1.0.0"
description = "Elite Beauty Clinic AI Consultation System"
requires-python = ">=3.9,<3.13"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
